--- a/css/contact.css
+++ b/css/contact.css
@@ -102,7 +102,7 @@ html{
   input[type=submit] {
     width: 100%;
     background-color: rgb(250, 165, 66);
-    color: white;
+    color: black;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
