--- a/css/resume.css
+++ b/css/resume.css
@@ -23,6 +23,15 @@ html{
     color:black;
     font-weight: 400;
   }
+.about{
+    color:black;
+  }
+.home{
+    color:black;
+  }
+.contact{
+    color:black;
+  }
   .content{
     grid-area:content;
   }
