--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,15 @@ html{
     color:black;
     font-weight: 400;
   }
+.resume{
+    color:black;
+  }
+.home{
+    color:black;
+  }
+.contact{
+    color:black;
+  }
   .content{
     grid-area:content;
   }
