--- a/css/home.css
+++ b/css/home.css
@@ -99,6 +99,9 @@ html{
   .main {
     max-width: auto;
     margin: auto;
+    display: grid;
+    grid-template-columns: auto;
+   
   }
   
   .row {
